# ARMEditor

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.8ccb1a2  SchemeFileParser.cpp  SchemeFileParser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywidget.h  parser.cpp  simple_parser.cpp  simple_reader.cpp  user.cfg
Client/: CMakeLists.txt  main.cpp  user.cfg  users.json
Client/application/: LoginDialog.cpp  LoginDialog.h  MainView.cpp  MainView.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  OrderWidget.cpp  OrderWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myview.cpp  myview.h  mywidget.cpp  mywidget.h
Client/db_lib/: DBManager.cpp  DBManager.h  db_config.txt  db_connection.cpp  db_connection.h
Client/orders_lib/: AutomaticOrder.cpp  AutomaticOrder.h  ManualOrder.cpp  ManualOrder.h  Order.h  OrdersRepository.cpp  OrdersRepository.h  orders.json
Client/parser_lib/: SchemeFileParser.cpp  SchemeFileParser.h
Client/parser_lib/bmp_additional/: BMPFile.h
Client/parser_lib/cache/: tmp.cache
Client/parser_lib/src/: SchemeFileNS.h  SchemeObjectParser.cpp  SchemeObjectParser.h  SchemeParser.h
Client/primitives_lib/: FiguresClasses.cpp  FiguresClasses.h  SchemeClass.cpp
Client/schemes_exp/srv/: Амурский-Датта Структурная.схема  Архара-Ядрин schit.схема  Архара-Ядрин struct.схема  Кокшетау Связь.схема  Кубинка Можайск Multi.схема  Кубинка Можайск Struct.схема  МЦД4 Структурная.схема  Оренбург-Кувандык Щитовая.схема  УланУдэ_subst.схема  Фили_Мультищитовая.схема  Шумиха-Курган Структурная.схема  Шумиха-Курган Щитовая.схема
Client/socket_client/lib/: arm_client.h
DriverEmulator/: CMakeLists.txt  driver_emulator_main.cpp  mainwindow.cpp  mainwindow.ui
DriverEmulator/lib/: driver_emulator.cpp
PARSERLIB/: .gitignore  CMakeLists.txt  parser.cpp
PARSERLIB/cache/: SchemeCache.ДаняБуцкий
PARSERLIB/docs/: riff.txt
PARSERLIB/lib/: BimBimBamBam.h  SchemeFileNS.h  SchemeFileParser.cpp  SchemeFileParser.h  SchemeObjectNS.h  SchemeObjectParser.cpp  SchemeObjectParser.h
PARSERLIB/logs/: Ellips  Ellips2  Ellips3  Line2.txt  Line3.txt  Polygon  RESULTUVERT 2 CACHES.txt  SchemeLogs.txt  auto1.txt  auto4.txt  auto5.txt  auto6.txt  fffffff  razultuvert.txt  razultuvert2.txt  resulruniver.txt  resulruniver2.txt  resultuvert-test.txt  teleisgnal  teleizm  teleupr  text  textauto2.txt  tttt1111  tttt2222  вввввв  текст.txt
PARSERLIB/parser/: SchemeFileParser.h
PARSERLIB/schemes_exp/: 10пикселей.схема  2lays2.схема  2lays4.схема  RESULTUVERT 2 CACHES.схема  arcallmirror.схема  arcallmirror2.схема  arcnonmirror.схема  arcvertmirror.схема  arcvertmirror2.схема  auto1.схема  auto2.схема  auto4.схема  auto6.схема  auto8.схема  nonmirror.схема  razultuvert2.схема  textandlineauto2.схема  Изображение.схема  Кнопка перехода.схема  Линия.схема  Мультищитовая3.схема  Полигон.txt  Полигон.схема  Полигон2.схема  Полигон3.схема  Текст.xml  Текст.схема  Телеуправление.схема  Точка перех0ода.схема  Электро2.схема  Электро4.схема  Эллипс15.схема  Эллипс2.схема  Эллипс3.схема  Эллипс4.схема  Эллипс6.схема  дуга6.схема  линия6.схема  текст.схема
application/: LoginDialog.cpp  LoginDialog.h  mainwindow.cpp  mainwindow.ui  myview.cpp  myview.h  mywidget.cpp  mywidget.h
arm_client/lib/: arm_client.cpp  arm_client.h
db lib/: CMakeLists.txt  db_connection.cpp
db_lib/: CMakeLists.txt  db_config.txt  db_connection.cpp  db_connection.h  myview_connection.h
driver_emulator/: CMakeLists.txt  driver_emulator_main.cpp  mainwindow.h  mainwindow.ui
driver_emulator/lib/: driver_emulator.cpp  driver_emulator.h
interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  myview.cpp  myview.h  mywidget.cpp  mywidget.h
lib/: CMakeLists.txt  FiguresClasses.cpp  FiguresClasses.cpp.autosave  FiguresClasses.h  SchemeClass.cpp  SchemeClass.h
logs/: SchemeLogs.txt
parser/: CMakeLists.txt  SchemeFileNS.h  SchemeFileParser.cpp  SchemeFileParser.h  unusable.cpp
parser lib/: parser.cpp
parser lib/cache/: tmp.cache
parser lib/lib/: SchemeFileNS.h  SchemeFileParser.cpp  SchemeFileParser.h  SchemeObjectParser.cpp  SchemeObjectParser.h
parser lib/schemes_exp/: 10пикселей_но_с_скейлом.схема  2lays.схема  2lays3.схема  2line1.схема  2line2.схема  2line3.схема  2line4.схема  2line5.схема  2line6.схема  anglerect.схема  anglerect2.схема  archormirror.схема  archormirror2.схема  arcnonmirror2.схема  arrowline.схема  arrowline10.схема  arrowline2.схема  arrowline3.схема  arrowline4.схема  arrowline8.схема  arrowline9.схема  auto5.схема  auto9.схема  button_t.схема  button_tl.схема  button_tr.схема  button_tr2.схема  button_tr3.схема  ellipse10.схема  emptyscheme.схема  lib2.схема  poly10.схема  poly11.схема  poly12.схема  poly13.схема  razultuvert.схема  switchoff.схема  БПВА.схема  Полигон.схема  Полигон3.txt  (+26 more)
parser_lib/: CMakeLists.txt  SchemeFileNS.h  SchemeFileParser.cpp  SchemeFileParser.h  SchemeObjectParser.cpp  SchemeObjectParser.h
parser_lib/bmp_additional/: BMPFile.h  CMakeLists.txt
parser_lib/cache/: tmp.cache
parser_lib/src/: SchemeFileNS.h  SchemeObjectParser.cpp  SchemeObjectParser.h  SchemeParser.cpp  SchemeParser.h  SchemeSectionsParser.cpp  (+1 more)
primitives_lib/: CMakeLists.txt  FiguresClasses.cpp  FiguresClasses.h  SchemeClass.cpp  SchemeClass.h
schemes_exp/: 1объект.схема  2объекта.схема  444444444.схема  animation.схема  el10.схема  elline.схема  elline2.схема  ellipseallmirror.схема  ellipsenonmirror.схема  ellipsevertmirror.схема  gopoint.схема  horandvertmirror.схема  hormirror.схема  lib1.схема  lib3.схема  many_arc.схема  many_arc2.схема  many_rects.схема  many_rects2.схема  manyobjects.схема  manypolys.схема  mellips.схема  pereswitch.схема  rect_and_angle.схема  rectallmorror.схема  rectandtelem.схема  recthormirrormorror.схема  rectnonmorror.схема  rectvertmirror.схема  resulrun.схема  resulrun2.схема  resulruniver.схема  resulruniver2.схема  resultuvert-test.схема  resultuvert2.схема  resultuvert3.схема  stop.схема  switchoff2.схема  telec.схема  telec2.схема  (+97 more)
tests/: CMakeLists.txt  mock_test_db_connection.cpp  test_db_connection.cpp
(+22 files in other folders)
